fix: header title color in dark mode

--- a/src/css/glass.css
+++ b/src/css/glass.css
@@ -76,6 +76,7 @@ bw-glass-header {
   border-top-left-radius: var(--bw-glass-border-radius);
   border-top-right-radius: var(--bw-glass-border-radius);
   background-color: var(--bw-glass-header-bg-color);
+  color: var(--bw-font-color);
 
   anchor-scope: --bw-action-menu;
 }
